--- a/level 43/homework/style.css
+++ b/level 43/homework/style.css
@@ -3,7 +3,8 @@ p{
     background-color: black;
 }
 
+
 button{
-    color: green;
-    text-align: center;
+    color: red;
+    background-color: black;
 }
