--- a/level 68/homework/portfolio/style.css
+++ b/level 68/homework/portfolio/style.css
@@ -4,25 +4,24 @@
     box-sizing: border-box;
 }
 
-.dd{
-    color: black;
-    background-color: red;
-    width: 1500px;
-    height: 200px;
-    font-family: cursive;
-    font-size: 50px;
-    
-}
-
 
 nav{
-    position: absolute;
-    top:0px;
-    left:1400px;
-    color: black;
-    font-family: cursive;
-    background-color: red;
+            padding: 0;
+            background-color: red;
+            background-image: url('your-image.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            font-family: Arial, sans-serif;
 }
+        .link-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+
 
 
 img{
@@ -35,10 +34,14 @@ img{
 p{
     position:relative;
     top:200px;
+    color:blue;
+    font-family:cursive;
+
 }
 
 hr{
     position: relative;
     top: 200px;
 }
+
 
