--- a/level 68/homework/portfolio/registration.css
+++ b/level 68/homework/portfolio/registration.css
@@ -1,9 +1,93 @@
-div{
-    color: black;
-    background-color: red;
-    width: 1500px;
-    height: 50px;
-    font-family: cursive;
-    font-size: 50px;
-    text-align: center;
+
+:root{
+    --text-color:#f0f0f0;
+    --border-color:rgba(255,255,255,0.5)
+    
 }
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Verdana;
+}
+
+
+body{
+    background-image: url(image.png);
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh
+}
+
+
+form{
+    width: 500px;
+    height: 700px;
+    padding: 50px;
+    background-color:orange;
+    backdrop-filter: blur(.5em);
+    border: 2px solid var(--border-color);
+    border-radius: 30px;
+    text-align: center;
+    
+
+}
+.submit-button{
+    
+  
+        background-color: #007BFF; 
+        color: white; 
+        border-radius: 8px; 
+        padding: 15px 30px; 
+        font-size: 20px; 
+        font-weight: bold; 
+        cursor: pointer; 
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); 
+        transition: transform 0.2s, box-shadow 0.2s; 
+      }
+      
+      .big-blue-button:hover {
+        transform: scale(1.05);
+        box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3); 
+      }
+
+
+
+h1{
+    font-size: 50px;
+    margin-bottom: 20px;
+
+}
+
+h2{
+    font-size: 25px;
+    margin-bottom: 20px;
+
+}
+
+
+label{
+    text-align: start;
+    display: block;
+    font-size: 25px;
+    margin-bottom: 5px;
+
+}
+
+
+input{
+    width:100%;
+    height: 5px;
+    padding:12px;
+
+}
+
+
+
+
+
+
+
+
