--- a/level 68/homework/portfolio/style.css
+++ b/level 68/homework/portfolio/style.css
@@ -5,35 +5,42 @@
 }
 
 
-nav{
-            padding: 0;
-            background-color: red;
-            background-image: url('your-image.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            font-family: Arial, sans-serif;
+nav {
+    display: flex;
+    justify-content: center; 
+    gap: 20px;
 }
-        .link-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
 
 
 
 
 img{
-    width: 1000px;
+    width: 500px;
     height: 500px;
-    position:relative;
-    top:200px;
+    
+   
 }
 
+#main{
+      display: flex; 
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 40px;
+      
+
+     
+     
+    }
+
+
+
+   
+        
+    
 p{
-    position:relative;
-    top:200px;
+    position: absolute;
+    top: 10px;
+    
     color:blue;
     font-family:cursive;
 
