--- a/level 68/homework/portfolio/style.css
+++ b/level 68/homework/portfolio/style.css
@@ -52,3 +52,18 @@ hr{
 }
 
 
+
+@media screen and (min-width: 1200px) {
+    .service {
+      width: 30%;
+      margin: 20px 0;
+    }
+  
+    .content h2 {
+      font-size: 26px;
+    }
+  
+    footer {
+      font-size: 16px;
+    }
+  }
