--- a/level 68/homework/portfolio/registration.css
+++ b/level 68/homework/portfolio/registration.css
@@ -86,6 +86,23 @@ input{
 
 
 
+@media screen and (min-width: 1200px) {
+    .service {
+      width: 30%;
+      margin: 20px 0;
+    }
+  
+    .content h2 {
+      font-size: 26px;
+    }
+  
+    footer {
+      font-size: 16px;
+    }
+  }
+
+
+
 
 
 
