--- a/level 68/homework/portfolio/registration.css
+++ b/level 68/homework/portfolio/registration.css
@@ -25,7 +25,7 @@ form{
     width: 500px;
     height: 700px;
     padding: 50px;
-    background-color:orange;
+    background-color:blue;
     backdrop-filter: blur(.5em);
     border: 2px solid var(--border-color);
     border-radius: 30px;
