--- a/level 78/homework/style.css
+++ b/level 78/homework/style.css
@@ -35,3 +35,12 @@ div{
     border-radius: 10px; /* Rounded corners */
    
 }
+
+footer{
+    display: flex;
+    justify-content: center;
+    background-color: blue;
+    flex-direction: column;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+}
